# projet_scrap_devoir

./: .gitignore  Predictiondechamp.ipynb  Recherche des champions voisins.ipynb  Récupération et prédiction d'objet.ipynb  Récupération et prédiction de champ.ipynb  app.py  apparition.ipynb  appbooquin.py  commencer_marimo.py  dehors  c'est chaud.ipynb  knn_data.pkl  lancer_app.bat  lol_champ_model.pkl  lol_price_model.pkl  main.py  présentation_champions_complets.csv  présentation_objets_complets.csv  pyproject.toml  recherche des voisins.ipynb  requirements.txt  scrap_lol.ipynb  scrap_lol_app.py  tableau de présentation champ.ipynb  tableau de présentation objet.ipynb  test.ipynb
.streamlit/: config.toml
Plus utiles/: (crash test)Récupération et prédiction d'objet.ipynb  Appchamp.py  Appchampcurseur.py  scrap_lol_app.py  utilisation modèle de prédiction de champ.ipynb
__marimo__/session/: Appchamp.py.json  Appchampcurseur.py.json  Apppreictiondechamp.py.json  appbooquin.py.json  commencer_marimo.py.json
pages/: 1_Forge.py  1_Inventaire de LeBlanc.py  2_Répertoire de Riven.py  2_refobjet.py  3_Bestaire de Rengar.py  3_Bestiaire de Rengar.py  3_refchamp.py  4_Labo de Singed.py  4_Warwick land.py  5_rajout.py
